--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,4 +22,4 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -tags integration -v -race -cover ./...
+        run: go test -tags integration -v -race -cover .
